# vk_compute_mipmaps

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
demo_app/: CMakeLists.txt  app_args.cpp  app_args.hpp  camera_controls.cpp  camera_controls.hpp  drawing.cpp  drawing.hpp  gui.cpp  gui.hpp  image_names.hpp  julia.cpp  julia.hpp  main.cpp  mipmap_pipelines.cpp  mipmap_pipelines.hpp  mipmaps_app.cpp  mipmaps_app.hpp  nvpro_pyramid_dispatch_alternative.cpp  nvpro_pyramid_dispatch_alternative.hpp  pipeline_alternative.cpp  pipeline_alternative.hpp  py2_pipeline_alternatives.inc  rtx3090.json  rtx3090_baseline.json  search_paths.hpp
docs/: alternatives.md.html  strategy.md.html  style.css  test_images.txt
extras/: README.md
extras/fast_pipelines/fixed3levels/: fast_pipeline_alternative.glsl  fixed3levels.cpp
extras/fast_pipelines/maybequad/: fast_pipeline_alternative.glsl  maybequad.cpp
extras/fast_pipelines/noshared/: fast_pipeline_alternative.glsl  noshared.cpp
extras/fast_pipelines/onelevel/: fast_pipeline_alternative.glsl  onelevel.cpp
extras/fast_pipelines/quad3/: fast_pipeline_alternative.glsl  quad3.cpp
extras/fast_pipelines/quad4/: fast_pipeline_alternative.glsl  quad4.cpp
extras/fast_pipelines/quadflex/: fast_pipeline_alternative.glsl  quadflex.cpp
extras/fast_pipelines/quadshared/: fast_pipeline_alternative.glsl  quadshared.cpp
extras/fast_pipelines/workgroup1024/: fast_pipeline_alternative.glsl  workgroup1024.cpp
extras/general_pipelines/: py2_dispatch_impl.hpp  py2_generate_all.py  py2_generate_source.py
extras/general_pipelines/baseline/: baseline.cpp  general_pipeline_alternative.glsl
extras/general_pipelines/general2/: general2.cpp  general_pipeline_alternative.glsl
extras/general_pipelines/general2s/: general2s.cpp  general_pipeline_alternative.glsl
extras/general_pipelines/general3level/: general3level.cpp  general_pipeline_alternative.glsl
extras/general_pipelines/onelevel/: general_pipeline_alternative.glsl  onelevel.cpp
extras/general_pipelines/py2_10_10_10/: general_pipeline_alternative.glsl  py2_10_10_10.cpp
extras/general_pipelines/py2_10_12_12/: general_pipeline_alternative.glsl  py2_10_12_12.cpp
extras/general_pipelines/py2_10_14_14/: general_pipeline_alternative.glsl  py2_10_14_14.cpp
extras/general_pipelines/py2_10_16_16/: general_pipeline_alternative.glsl  py2_10_16_16.cpp
extras/general_pipelines/py2_10_20_20/: general_pipeline_alternative.glsl  py2_10_20_20.cpp
extras/general_pipelines/py2_10_24_24/: general_pipeline_alternative.glsl  py2_10_24_24.cpp
extras/general_pipelines/py2_10_8_8/: general_pipeline_alternative.glsl  py2_10_8_8.cpp
extras/general_pipelines/py2_12_10_10/: general_pipeline_alternative.glsl  py2_12_10_10.cpp
extras/general_pipelines/py2_12_12_12/: general_pipeline_alternative.glsl  py2_12_12_12.cpp
extras/general_pipelines/py2_12_14_14/: general_pipeline_alternative.glsl  py2_12_14_14.cpp
extras/general_pipelines/py2_12_16_16/: general_pipeline_alternative.glsl  py2_12_16_16.cpp
extras/general_pipelines/py2_12_20_20/: general_pipeline_alternative.glsl  py2_12_20_20.cpp
extras/general_pipelines/py2_12_24_24/: general_pipeline_alternative.glsl  py2_12_24_24.cpp
extras/general_pipelines/py2_12_8_8/: general_pipeline_alternative.glsl  py2_12_8_8.cpp
extras/general_pipelines/py2_16_10_10/: general_pipeline_alternative.glsl  py2_16_10_10.cpp
extras/general_pipelines/py2_16_12_12/: general_pipeline_alternative.glsl  py2_16_12_12.cpp
extras/general_pipelines/py2_16_14_14/: general_pipeline_alternative.glsl  py2_16_14_14.cpp
extras/general_pipelines/py2_16_16_16/: general_pipeline_alternative.glsl  py2_16_16_16.cpp
extras/general_pipelines/py2_16_20_20/: general_pipeline_alternative.glsl  py2_16_20_20.cpp
extras/general_pipelines/py2_16_24_24/: general_pipeline_alternative.glsl  py2_16_24_24.cpp
extras/general_pipelines/py2_16_8_8/: general_pipeline_alternative.glsl  py2_16_8_8.cpp
extras/general_pipelines/py2_32_10_10/: general_pipeline_alternative.glsl  py2_32_10_10.cpp
extras/general_pipelines/py2_32_12_12/: general_pipeline_alternative.glsl  py2_32_12_12.cpp
extras/general_pipelines/py2_32_14_14/: general_pipeline_alternative.glsl  py2_32_14_14.cpp
extras/general_pipelines/py2_32_16_16/: general_pipeline_alternative.glsl  py2_32_16_16.cpp
extras/general_pipelines/py2_32_20_20/: general_pipeline_alternative.glsl  py2_32_20_20.cpp
extras/general_pipelines/py2_32_24_24/: general_pipeline_alternative.glsl  py2_32_24_24.cpp
extras/general_pipelines/py2_32_8_8/: general_pipeline_alternative.glsl  py2_32_8_8.cpp
extras/general_pipelines/py2_4_10_10/: general_pipeline_alternative.glsl  py2_4_10_10.cpp
extras/general_pipelines/py2_4_12_12/: general_pipeline_alternative.glsl  py2_4_12_12.cpp
extras/general_pipelines/py2_4_14_14/: general_pipeline_alternative.glsl  py2_4_14_14.cpp
extras/general_pipelines/py2_4_16_16/: general_pipeline_alternative.glsl  py2_4_16_16.cpp
extras/general_pipelines/py2_4_20_20/: general_pipeline_alternative.glsl  py2_4_20_20.cpp
extras/general_pipelines/py2_4_24_24/: general_pipeline_alternative.glsl  py2_4_24_24.cpp
extras/general_pipelines/py2_4_8_8/: general_pipeline_alternative.glsl  py2_4_8_8.cpp
extras/general_pipelines/py2_6_10_10/: general_pipeline_alternative.glsl  py2_6_10_10.cpp
extras/general_pipelines/py2_6_12_12/: general_pipeline_alternative.glsl  py2_6_12_12.cpp
extras/general_pipelines/py2_6_14_14/: general_pipeline_alternative.glsl  py2_6_14_14.cpp
include/: frame_manager.hpp  make_compute_pipeline.hpp  mipmap_storage.hpp  scoped_image.hpp  timestamps.hpp
minimal_app/: CMakeLists.txt  minimal_mipmaps.cpp  search_paths.hpp
nvpro_pyramid/: nvpro_pyramid.glsl  nvpro_pyramid_dispatch.hpp  srgba8_mipmap_fast_pipeline.comp  srgba8_mipmap_general_pipeline.comp  srgba8_mipmap_preamble.glsl
shaders/: camera_transforms.h  filter_modes.h  fullscreen_triangle.vert  julia.comp  julia.h  scene_modes.h  srgb.h  swap_image_pipeline.frag  swap_image_push_constant.h
(+22 files in other folders)
